# meets-match

./: . cursorrules  .claude.json  .coverage  .cursorignore  .dev.vars.example  .env  .env.ci.template  .env.example  .env.sample  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .rsync-exclude  .ruff.toml  .rustfmt.toml  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  biome.json  buf.gen.yaml  buf.work.yaml  check_db.py  check_db_2.py  check_prod_db.py  check_prod_db_2.py  codecov.yml  commit_msg.txt  config.py  coverage  coverage.out  docker-compose.otel.yml  docker-compose.yml  (+23 more)
.claude/: settings.local.json
.claude/agents/: doc-sync-archivist.md  project-sync-coordinator.md  test-coverage-enforcer.md
.clawpatch/: config.json  project.json
.clinerules/: meetmatch-project-guidelines.md
.cursor/rules/: global-rules.mdc
.deepsec/: README.md  deepsec.config.ts  package.json  pnpm-lock.yaml
.gemini/: config.yaml  styleguide.md
.github/: copilot-instructions.md
.github/workflows/: autofix.yml  ci.yml  codeql.yml  test-coverage.yml
.jules/: bolt.md  sentinel.md
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/plans/: cloudflare-migration.md
.sisyphus/run-continuation/: ses_191a3b8aaffeywxsEhbiU5l3X0.json  ses_192201b24ffemXLcOdBxfIvSmS.json  ses_1cba99441ffeZu3YNs2zuXQpcE.json  ses_1d96d48a0ffeJwqzscdi2YlJPQ.json  ses_1e03127daffeP06xk7FI3KwtPO.json
.trae/documents/: PRD.md  development-deployment-guide.md  implementation-status-report.md  monitoring-architecture.md  monitoring-technical-architecture.md  project-overview.md  technical-architecture.md
_docs_/: DEPLOYMENT.MD  DEVELOPMENT.MD  FEATURE.MD  TECH.MD
_docs_/deployment/: DEPLOYMENT.MD  coolify-guide.md  vps-systemd-guide.md
_docs_/old/: DEPLOYMENT.MD  vps-systemd-guide.md
alembic/: env.py
alembic/versions/: 1edde69cee05_initial_migration.py  c1a9743e2452_add_last_reminded_at_to_users.py  d3e5f7a9b1c2_add_deleted_media_table.py  e5f6g7h8i9j0_add_is_sleeping_to_users.py
bot/: __init__.py  bot.py  config.py  main.py  states.py
bot/controllers/: policy_controller.py  user_controller.py
bot/database/: __init__.py  connection.py  db_operations.py  initialization.py  matching.py  migrations.py  policy_manager.py  preferences.py  profiles.py  schema.py  user_management.py
bot/handlers/: __init__.py  callback_query.py  matching.py  matching_handler.py  media.py  message.py  preferences_handler.py  profile.py  profile_update.py  profile_view.py  start.py  user_commands.py  utils.py
bot/models/: policy.py  user.py
bot/services/: policy_service.py  user_service.py
bot/utils/: __init__.py  constants.py  helpers.py  keyboards.py  states.py  validators.py
cmd/bot/: api_test.go  main.go
deployments/docker/: README.md  alert_rules.yml  alertmanager-config.yml  clickhouse-cluster.xml  clickhouse-config.xml  clickhouse-users.xml  custom-function.xml  docker-compose.monitoring.yml  otel-collector-config.yaml  otel-collector-metrics-config.yaml  prometheus.yml  start-monitoring.ps1  start-monitoring.sh
docs/: DEVELOPMENT.MD  ENVIRONMENTS.MD  FEATURE.MD  FEATURE_FLAGS.MD  PRD.md  TECH.MD  TELEGRAM_BOT_ARCHITECTURE.md  cutover-plan.md  go-deletion.md  scratchpad.md  telegram-bot-architecture.md
docs/implementation-plan/: refactor-bun-to-pnpm-vitest.md
internal/bothandler/: handler.go  handler_test.go  integration_test.go  state_manager.go  state_manager_test.go
internal/cache/: redis.go  redis_integration_test.go  redis_test.go
internal/database/: db.go  db_test.go  models.go  models_test.go
internal/errors/: errors.go  errors_test.go
internal/interfaces/: services.go
internal/middleware/: auth.go  cache.go  cache_test.go  error_handler.go  error_handler_test.go  logging.go  logging_middleware.go  ratelimit.go
internal/monitoring/: alerting.go  alerting_test.go  bot_middleware.go  health.go  metrics.go  (+10 more)
locales/: base.pot
migrations/: 0000_create_interactions_table.sql  0000_perpetual_firebird.sql  001_initial_schema.sql
scripts/: backup.sh  build.sh  check.sh  cleanup_media.py  deploy.sh  deploy_app.sh  deploy_beszel_agent.sh  deploy_otel.sh  generate-version.ts  local_ci_test.sh  migrate.ts  seed-dev-db.ts  setup-bot-commands.ts  setup_env_dev.sh  setup_local_db.py  setup_vps.sh  start_local.sh  test.sh
src/: __init__.py  bot.py  config.py  custom_types.py  index.ts  lib.rs  lib_tests.rs  main.py
test/: coverage.ps1  coverage.sh
tests/: README.md  __init__.py  application_test.py  conftest.py  integration_tests.rs  test_api_error_reporting.py  test_application.py  test_application_mock.py  test_bot.py  test_bot_error_handler.py  test_cleanup.py  test_database.py  test_e2e.py  test_helpers.py  test_mock_config.py  test_policy_manager.py  test_preferences_handler.py  test_profile_update.py  test_security_sanitization.py  test_sentry_integration.py  test_utils.py
version-3/: .env.test  .ruff.toml  Dockerfile  README.md  docker-compose.yml  meetsmatch.db  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
(+533 files in other folders)
