[package]
name = "meetsmatch-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.3.0" # Check for the latest version of workers-rs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5.0"
http = "0.2" # or 1.0 if ready and compatible
# tracing = "0.1"
# opentelemetry = "0.20"
# reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[profile.release]
lto = true
opt-level = 's' # Optimize for size
strip = true
codegen-units = 1
panic = "abort"

[features]
default = ["console_error_panic_hook"]
