[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meetsmatch"
version = "0.1.0"
description = "AI-powered Telegram matchmaking bot"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-telegram-bot[job-queue]>=21.9",
    "redis>=5.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.30",
    "structlog>=24.1.0",
    "alembic>=1.13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "geopy>=2.4.0",
    "sentry-sdk>=1.40.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pillow>=12.0.0",
    "python-magic>=0.4.27",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a29",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "pre-commit>=3.6.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["meetsmatch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.uv]
resolution = "highest"

